# aoi360-eye-tracking-system

./: .gitignore  README.md
docs/architecture/: overview.md
docs/decisions/: ADR-001-monorepo.md
docs/phase0/: README.md  aoi-data-contract.md  csv-schema.md  runtime-unity.md  validation-checklist.md
python/analytics/: README.md  pyproject.toml
python/offline/: README.md  pyproject.toml  requirements.txt
python/offline/scripts/: build_aoi_map.py  build_aoi_sequence.py  detect_grounding_dino.py  extract_frames.py  preprocess_gui.py  rebuild_runtime_assets.py
python/offline/src/aoi360_pipeline/: __init__.py  aoi_map_builder.py  aoi_map_sequence_builder.py  frame_extraction.py  grounding_dino.py  preprocess_gui.py  rebuild_runtime_assets.py
python/shared/schemas/: aoi_metadata.example.json  gaze_log_columns,txt
unity/AOI360Runtime/Assets/Editor/: FindMissingScripts.cs  SyncGeneratedAoiSequences.cs
unity/AOI360Runtime/Assets/Materials/: M_GazeDebugLine.mat  M_HitMarker.mat  M_Skybox360.mat  S_AOIOverlay360.shader  red.mat
unity/AOI360Runtime/Assets/RenderTextures/: RT_360Video.renderTexture
unity/AOI360Runtime/Assets/Scenes/: Phase0_360Playback.unity  Phase0_360Playback_VR.unity  SampleScene.unity
unity/AOI360Runtime/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
unity/AOI360Runtime/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
unity/AOI360Runtime/Assets/_Recovery/: 0 (1).unity  0 (2).unity  0 (3).unity  0 (4).unity  0 (5).unity  0.unity
unity/AOI360Runtime/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+17 files in other folders)
